--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-    "python.pythonPath": "/home/heaven/anaconda3/envs/cpedatabase/bin/python",
-    "python.linting.pylintEnabled": true,
-    "python.linting.enabled": true
+    "python.pythonPath": "D:\\Program Files\\Anaconda3\\envs\\databaseEnv\\python.exe"
 }
